# MPCA

./: README.md
python/: CHANGELOG.md  README.md  pyproject.toml
python/mpca/: __init__.py  bootstrap.py  correction.py  imputation.py  naive_pca.py  pipeline.py  postprocess.py
python/mpca.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: test_correction.py  test_imputation.py  test_pipeline.py
r/: DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md
r/R/: bootstrap.R  correction.R  imputation.R  naive_pca.R  pipeline.R  postprocess.R
r/tests/: testthat.R
r/tests/testthat/: test-correction.R  test-imputation.R  test-pipeline.R
